--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule ".config/kickstart-modular.nvim"]
 	path = .config/nvim
 	url = https://github.com/mrcxmrj/kickstart-modular.nvim
+[submodule ".config/nvim"]
+	path = .config/nvim
+	url = https://github.com/mrcxmrj/kickstart-modular.nvim
