--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ',*-256color*:Tc'
 
 unbind C-b
-set -g prefix C-Space
+set -g prefix C-A
 
 set -g mouse on
 
@@ -26,8 +26,8 @@ bind n new-window -c "#{pane_current_path}"
 set -g base-index 1
 set-window-option -g pane-base-index 1
 
-bind -n M-h previous-window
-bind -n M-l next-window
+# bind -n M-h previous-window
+# bind -n M-l next-window
 
 set-window-option -g mode-keys vi
 unbind -T copy-mode-vi Space; #Default for begin-selection
