--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = https://github.com/mrcxmrj/kickstart-modular.nvim
+[submodule ".zsh-plugins/zsh-syntax-highlighting"]
+	path = .zsh-plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
