--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,3 @@
-set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ',*-256color*:Tc'
 
 unbind C-b
 set -g prefix C-A
@@ -36,6 +34,12 @@ unbind -T copy-mode-vi Enter; #Default for copy-selection
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 
+# status bar
+set -g status-bg colour8
+set -g status-fg colour250
+set -g status-right ""
+# set -g pane-active-border-style "fg=colour59"
+
 bind -r ^ last-window
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
@@ -50,3 +54,4 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
