--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,8 @@ unbind '"' # Split horizontally
 bind v split-window -h -c "#{pane_current_path}"
 bind h split-window -v -c "#{pane_current_path}"
 
+bind q "confirm-before -p 'kill-window #W? (y/n)' kill-window"
+
 unbind r  #DEFAULT KEY: Move to next window
 unbind n  #DEFAULT KEY: change current window interactively
 
