--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,10 +39,10 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 
 # status bar
-set -g status-bg colour8
+# set -g status-bg colour8
 # set -g status-fg colour250
-set -g status-fg colour2
-set -g status-right ""
+# set -g status-fg colour2
+# set -g status-right ""
 # set -g pane-active-border-style "fg=colour59"
 
 bind -r ^ last-window
