--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,9 @@
-[submodule "zsh/plugins/zsh-syntax-highlighting"]
-	path = zsh/plugins/zsh-syntax-highlighting
-	url = https://github.com/zsh-users/zsh-syntax-highlighting
-    	branch = master
 [submodule ".config/nvim"]
 	path = .config/nvim
 	url = https://github.com/mrcxmrj/kickstart-modular.nvim
 [submodule ".zsh-plugins/zsh-syntax-highlighting"]
 	path = .zsh-plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule ".config/tmux/plugins/onedark-tmux"]
+	path = .config/tmux/plugins/onedark-tmux
+	url = https://github.com/mrcxmrj/onedark-tmux
