--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,6 +27,7 @@ bind n new-window -c "#{pane_current_path}"
 
 set -g base-index 1
 set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
 # bind -n M-h previous-window
 # bind -n M-l next-window
@@ -39,11 +40,9 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel --clipboard"
 
 # status bar
-# set -g status-bg colour8
-# set -g status-fg colour250
-# set -g status-fg colour2
-# set -g status-right ""
-# set -g pane-active-border-style "fg=colour59"
+# set -Fg 'status-format[1]' '#{status-format[0]}'
+# set -g 'status-format[0]' ''
+# set -g status 2
 
 bind -r ^ last-window
 bind -n C-h select-pane -L
@@ -61,4 +60,16 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+
+set -g @catppuccin_window_default_color "#5c6370"
+set -g @catppuccin_window_default_background "#282c34"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_color "#98c379"
+set -g @catppuccin_window_current_background "#31353f"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "session"
 run ~/.config/tmux/plugins/onedark-tmux/catppuccin.tmux
