--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "xterm-256color"
+set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',*-256color*:Tc'
 
 unbind C-b
