make session module square

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,4 +79,5 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 
 set -g @catppuccin_status_modules_right "session"
+set -g @catppuccin_status_left_separator "█"
 run ~/.config/tmux/plugins/onedark-tmux/catppuccin.tmux
