change wezterm font, adjust tmux shortcuts to match vim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,13 +9,13 @@ set -g mouse on
 set -sg escape-time 0
 
 unbind v
-unbind h
+unbind s
 
 unbind % # Split vertically
 unbind '"' # Split horizontally
 
 bind v split-window -h -c "#{pane_current_path}"
-bind h split-window -v -c "#{pane_current_path}"
+bind s split-window -v -c "#{pane_current_path}"
 
 bind q "confirm-before -p 'kill-window #W? (y/n)' kill-window"
 
